--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8">
   <title>Robot AR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>body{margin:0;background:#000}</style>
-
-  <!-- Detecta SO y redirige al visor nativo -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    body { margin: 0; background: #000; display: flex; justify-content: center; align-items: center; height: 100vh; }
+    model-viewer { width: 100%; height: 100%; }
+  </style>
+</head>
+<body>
   <script>
     const glb  = 'https://yan2005dris-afk.github.io/blender-ar/robot.glb';
     const usdz = 'https://yan2005dris-afk.github.io/blender-ar/robot.usdz';
@@ -15,17 +19,25 @@
     const isAndroid = /Android/.test(navigator.userAgent);
 
     if (isIOS) {
-      // Quick Look (iOS 13+)
+      // Quick Look (iOS)
       location.href = usdz + '#allowsContentScaling=0';
     } else if (isAndroid) {
-      // Scene-Viewer (Chrome/Edge 86+)
+      // Scene Viewer (Android)
       const intent = `intent://arvr.google.com/scene-viewer/1.0?file=${encodeURIComponent(glb)}#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;S.browser_fallback_url=${encodeURIComponent(location.href)};end;`;
       location.href = intent;
     } else {
-      // Escritorio → mostramos simple vista 3D
-      location.href = 'index.html';
+      // PC → mostramos el visor 3D con <model-viewer>
+      document.body.innerHTML = `
+        <model-viewer src="${glb}" 
+                      alt="Robot 3D"
+                      auto-rotate
+                      camera-controls
+                      ar
+                      ar-modes="scene-viewer quick-look webxr"
+                      exposure="1"
+                      shadow-intensity="1">
+        </model-viewer>`;
     }
   </script>
-</head>
-<body></body>
+</body>
 </html>
